tests/error/ptr_no_match.gw
#! [contains] no match found
fun void test(int i){}
fun void test(float f){}

typedef void Test();
var Test t;
test @=> t;
